# rchat

./: .gitignore  CMakeLists.txt  README.md
console_process/: CMakeLists.txt
console_process/src/: CMakeLists.txt  main.cpp
helpers/src/: formatting.h
include/config/: config.h
include/headers/client/: client_session.h  client_session_handler.h
include/headers/console_process_handler/: console_process_handler.h
include/headers/helpers/: logging.h
include/headers/server/: clientsocketinfo.h  server.h
src/: CMakeLists.txt  main.cpp
src/client/: CMakeLists.txt  client.cpp  client.h  client_session.cpp  client_session_handler.cpp
src/client/src/: client.cpp
src/console_process_handler/: CMakeLists.txt  console_process_handler.cpp
src/helpers/: CMakeLists.txt  formatting.h  globals.h
src/helpers/src/: formatting.h
src/server/: CMakeLists.txt  clientsocketinfo.h  server.cpp  server.h
src/server/src/: server.cpp
